add_subdirectory(isostuffer)
add_subdirectory(tetviewer)
add_subdirectory(elasticity)
add_subdirectory(eigensolver)
add_subdirectory(single_tet)
add_subdirectory(fbem_input_gen)
add_subdirectory(rigidsim)
add_subdirectory(pulse)
add_subdirectory(init-rigid-tools)
add_subdirectory(soundgen)
add_subdirectory(acceleration_noise)
add_subdirectory(acoustic_transfer)
add_subdirectory(impulse_response)
add_subdirectory(unit_testing)
add_subdirectory(differentiate-interpolate-HRIR)
add_subdirectory(wavesolver-tools)
# add_subdirectory(impulse_response_gpu)
